fix: refactor and fixes navbar size on mobile view.

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -125,11 +125,9 @@
 
 @media (max-width: 960px) {
   .navbar {
-    height: 94px;
     width: 100%;
     gap: 8px;
     padding: 14px 16px;
-    padding-top: 48px;
     justify-content: space-between;
     align-items: center;
   }
